--- a/src/app/components/feeds/feeds.component.scss
+++ b/src/app/components/feeds/feeds.component.scss
@@ -29,8 +29,12 @@
       width: 100%;
       margin-bottom: 5vh;
 
-      @media (min-width: 768px) {
+      @media (min-width: 768px) and (max-width: 991px) {
         width: 45%;
+      }
+
+      @media (min-width: 992px) {
+        width: 30%;
       }
 
       &__image {
