--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,4 +1,13 @@
 $primary-text-color: #000000;
+$alternative-text-color: rgb(88, 88, 88);
+$alert-text-color: rgba(235, 21, 21, 0.801);
 $link-text-color: rgb(66, 66, 66);
 $link-hover-text-color: #000000;
 $link-active-text-color: #000000;
+$button-text-color: #ffffff;
+$button-edit-background-color: rgb(117, 128, 230);
+$button-edit-hover-background-color: rgb(20, 41, 230);
+$button-delete-background-color: rgb(230, 117, 145);
+$button-delete-hover-background-color: rgb(241, 20, 75);
+$button-send-background-color: rgb(128, 128, 128);
+$button-send-hover-background-color: rgb(47, 47, 47);
