--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -3,7 +3,7 @@
     <div class="feed__content__item">
       <div class="feed__content__item__actions">
         <a [routerLink]="['/feed/' + article?._id + '/edit']" class=" button button--edit">Editar</a>
-        <a [routerLink]="['/feed/' + article?._id + '/delete']" class=" button button--delete">Eliminar</a>
+        <a href (click)="onDelete($event)" class="button button--delete">Eliminar</a>
       </div>
       <div *ngIf="article?.image" class="feed__content__item__image">
         <img src="{{ article?.image }}" alt="{{ article?.title }}">
