--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -35,6 +35,7 @@
     margin-top: 3px;
 
     &__item {
+      margin-right: 10px;
       text-transform: uppercase;
       text-decoration: none;
       font-weight: bold;
