--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <header class="navbar">
   <div class="navbar__logo">
     <h1>{{ title }}</h1>
+    <span>{{ date | date:'EEEE, d \'de\' MMMM \'de\' yyyy' }}</span>
   </div>
   <nav class="navbar__menu">
     <a class="navbar__menu__item" routerLink="/feeds" routerLinkActive="navbar__menu__item--active">Inicio</a>
