--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -14,6 +14,8 @@
 
   &__logo {
     width: 90%;
+    padding-bottom: 8px;
+    border-bottom: 2px solid $primary-text-color;
 
     h1 {
       font-family: chomsky;
@@ -22,7 +24,18 @@
       margin: 0;
       padding-bottom: 5px;
       text-align: center;
-      border-bottom: 2px solid $primary-text-color;
+    }
+
+    span {
+      display: block;
+      width: 100%;
+      text-align: center;
+      color: $alternative-text-color;
+      padding-top: 10px;
+      padding-bottom: 5px;
+      font-size: .8rem;
+      font-weight: 400;
+      font-style: normal;
     }
   }
 
@@ -30,7 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3vh;
+    height: 5vh;
     width: 90%;
     margin-top: 3px;
 
