--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
   </div>
   <nav class="navbar__menu">
     <a class="navbar__menu__item" routerLink="/feeds" routerLinkActive="navbar__menu__item--active">Inicio</a>
+    <a class="navbar__menu__item" routerLink="/el-mundo" routerLinkActive="navbar__menu__item--active">El Mundo</a>
     <a class="navbar__menu__item" routerLink="/create" routerLinkActive="navbar__menu__item--active">Crear</a>
   </nav>
 </header>
